trunk/Archive2/37/c0ed458d486979/output
main.cpp:4:2: warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
*ptr = 2;
~^
main.cpp:4:2: error: incompatible integer to pointer conversion initializing 'int *' with an expression of type 'int' [-Werror,-Wint-conversion]
*ptr = 2;
 ^     ~
1 warning and 1 error generated.
